<?xml version="1.0"?>
<package format="2">
  <name>my_talker_listener_cpp</name>
  <version>0.0.0</version>
  <description>
    This package demonstrates publishing and subscribing messages.
  </description>
  
  <maintainer email="thaingoctu@roboticsprogramming.dev">Thai Ngoc Tu</maintainer>
  
  <license>MIT</license>

  <url type="bugtracker">https://github.com/roboticsprogrammingdev/my_talker_listener_cpp/issues</url>
  <url type="repository">https://github.com/roboticsprogrammingdev/my_talker_listener_cpp</url>
  
  <author>Thai Ngoc Tu</author>
  <author email="thaingoctu@roboticsprogramming.dev">Thai Ngoc Tu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
